# nix_config

./: README.md  flake.nix  test-eval.nix
hosts/airM4/: default.nix  home.nix
modules/: flake-hack.nix  flake-parts.nix
modules/darwin/: core.nix  home-manager.nix  homebrew.nix  macos.nix  packages.nix  system-base.nix
modules/general/: flake-parts.nix  nix.nix  templates.nix
modules/home/: aerospace.nix  claude-code.nix  claude-config.nix  core.nix  fish.nix  git.nix  home-base.nix  kitty.nix  neovim.nix  ssh.nix  starship.nix
modules/home/claude-config/: instructions.nix  settings.nix  skills.nix  statusline.nix
modules/hosts/: home-manager.nix  options.nix  users.nix
modules/hosts/airM4/: default.nix
modules/hosts/darwin/: home-manager.nix  homebrew.nix  macos.nix  packages.nix  system-base.nix
modules/hosts/darwin/airM4/: default.nix
modules/hosts/darwin/m4/: default.nix
modules/system/: homebrew.nix  packages.nix
templates/default/: flake.nix
templates/python/: flake.nix  pyproject.toml
